--- a/baby-bracket.html
+++ b/baby-bracket.html
@@ -2,41 +2,32 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Elizabeth Brown UX Researcher and Consultant | Monotype CaseStudy</title>
+    <title>Liz Brown UX Researcher and Consultant | Baby Bracket CaseStudy</title>
     <link rel="images" href="images">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@100;300;400;700;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css\custom.css">
+    <!-- scripts -->
     <script src="https://kit.fontawesome.com/bb7ea3d4ab.js" crossorigin="anonymous">
     </script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script>
+      $(function(){
+          $('#nav').load('reusenav.html');
+      });
+    </script>
+    <!-- end of scripts -->
   </head>
   <body>
     <!-- MAIN -->
     <main>
       <!--CONTAINER -->
       <div class="container-fulid">
-        <!-- NAV -->
-        <div class="row main-nav">
-          <!-- logotype -->
-          <div class="logotype col-2" >
-            <a href="index.html" tabindex="0">
-              <img class="logotype-img" src="images\logotype.PNG" alt="">
-            </a>
-          </div>
-          <!-- nav -->
-          <div class="col-nav-links col-2 offset-8">
-            <div class=""tabindex="0">
-              <a class="main-nav-link" href="index.html ">ABOUT</a>
-            </div>
-            <div class=""tabindex="0">
-              <a class="main-nav-link" href="all-projects.html">WORK</a>
-            </div>
-            <div class=""tabindex="0">
-              <a class="main-nav-link" href="files\resume.PDF" target="_blank" >RESUME</a>
-            </div>
-          </div>
+        <!--  NAV -->
+        <div id="nav">
+
         </div>
-        <!-- NAV END -->
+        <!-- resuse nav end -->
         <div class="container mono-hero-container offset-2">
           <div class="row mt-5 pt-5  ">
             <div class="col-10 ">
@@ -98,8 +89,7 @@
     </footer>
     <!-- END OF FOOTER -->
     <!-- SCRIPT -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
-    </script>
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous">
     </script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
