--- a/work.html
+++ b/work.html
@@ -2,11 +2,12 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Elizabeth Brown UX Researcher and Consultant</title>
+    <title>Liz Brown UX Researcher and Consultant</title>
     <link rel="images" href="images">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@100;300;400;700;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css\custom.css">
+    <!-- scripts -->
     <script src="https://kit.fontawesome.com/bb7ea3d4ab.js" crossorigin="anonymous">
     </script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
@@ -15,15 +16,18 @@
           $('#nav').load('reusenav.html');
       });
     </script>
+    <!-- end of scripts -->
   </head>
   <body>
     <!-- MAIN -->
     <main>
       <!--CONTAINER -->
       <div class="container-fulid main-container">
+        <!-- NAV -->
         <div id="nav">
 
         </div>
+        <!-- resuse nav end -->
         <!-- WORK -->
         <div class="row mt-5 pl-3 pr-3 offset-1" id="work">
           <div class="col-11 mb-3">
