--- a/baby-bracket.html
+++ b/baby-bracket.html
@@ -11,9 +11,15 @@
     <script src="https://kit.fontawesome.com/bb7ea3d4ab.js" crossorigin="anonymous">
     </script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <!-- script functions -->
     <script>
       $(function(){
-          $('#nav').load('reusenav.html');
+          $('#nav').load('cc-nav.html');
+      });
+    </script>
+    <script>
+      $(function(){
+          $('#footer').load('cc-footer.html');
       });
     </script>
     <!-- end of scripts -->
@@ -77,16 +83,9 @@
     </main>
     <!-- END OF MAIN -->
     <!-- FOOTER -->
-    <footer class="footer">
-      <div class=" container">
-        <div class=" icon-container">
-        <a href="https://www.linkedin.com/in/elizabeth-alma-brown/" class="fab fa-linkedin-in fa-2x" target="_blank"></a>
-        <a href="https://medium.com/@liz.alma.brown" target="_blank" class="fab fa-medium-m fa-2x"></a>
-        <a href="mailto:liz.alma.brown@gmail.com?subject=I want to connect!" target="_self" data-content="liz.alma.brown@gmail.com" data-type="mail" class="far fa-envelope fa-2x" target="_blank"></a>
-        <p class="footer-p">© 2020 Built by uxliz</p>
-        </div>
-      </div>
-    </footer>
+    <div id="footer">
+
+    </div>
     <!-- END OF FOOTER -->
     <!-- SCRIPT -->
     <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
