--- a/cutgroup.html
+++ b/cutgroup.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Elizabeth Brown UX Researcher and Consultant | CUTGroup CaseStudy</title>
+    <title>Liz Brown UX Researcher and Consultant | CUTGroup CaseStudy</title>
     <link rel="images" href="images">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@100;300;400;700;900&display=swap" rel="stylesheet">
