building resume button

--- a/resume.html
+++ b/resume.html
@@ -34,12 +34,17 @@
 
         </div>
         <!-- resuse nav end -->
-        <!-- EXP -->
+        <!-- RESUME -->
         <div class="row mt-5 pl-3 pr-3 offset-1">
           <div class="col-11 mb-3">
-            <h2>Experience</h2>
+            <h2>Resume</h2>
           </div>
-          <!-- Today col -->
+          <div class="col-3">
+            <p>Experience</p>
+          </div>
+          <div class="w-100">
+          </div>
+          <!-- UXR/TODAY -->
           <div class="col-3">
             <p>Today</p>
           </div>
@@ -49,60 +54,103 @@
           </div>
           <div class="w-100">
           </div>
-          <!-- 2019-2020 col -->
+          <!-- UXR & Consult/2019-2020 -->
           <div class="col-3">
             <p>2019 - 2020</p>
           </div>
           <div class="col 8">
             <p>UX Researcher & Consultant</p>
-            <p>Open to new research opportunities</p>
+            <p>Established the first human-centered consulting service at the University of Michigan</p>
           </div>
           <div class="w-100">
           </div>
-          <!-- 2019 col -->
+          <!-- UXR Intern/2019 -->
           <div class="col-3">
             <p>2019</p>
           </div>
           <div class="col 8">
             <p>UX Researcher Intern</p>
-            <p>Open to new research opportunities</p>
+            <p>Conducted user research for a product team that developed enterprise SaaS for creative professionals</p>
           </div>
           <div class="w-100">
           </div>
-          <!-- 2nd 2019-2020 col -->
+          <!-- UXR Lead/2019-2020 -->
           <div class="col-3">
             <p>2019 - 2020</p>
           </div>
           <div class="col 8">
-            <p>Program Facilitator</p>
-            <p>Open to new research opportunities</p>
+            <p>UX Research Lead</p>
+            <p>Co-Designed and implanted a usability testing program with government and civic organizations</p>
+          </div>
+          <div class="w-100">
+          </div><!-- UXR/2018 -->
+          <div class="col-3">
+            <p>2018</p>
+          </div>
+          <div class="col 8">
+            <p>UX Researcher</p>
+            <p>Applied research insights to deliver an MVP for a Baby naming app</p>
           </div>
           <div class="w-100">
           </div>
-          <!-- 2018-2020 col -->
+          <!-- Civil Service/2016-2018 -->
           <div class="col-3">
             <p>2018 - 2020</p>
           </div>
           <div class="col 8">
-            <p>Graduate Student</p>
-            <p>Open to new research opportunities</p>
+            <p>Civil Service Designer </p>
+            <p>Initiated a redesign of public housing records and implementation of new departmental procedures</p>
           </div>
           <div class="w-100">
           </div>
-          <!-- Back in the Day col -->
+          <!-- People Nerd/Back in the Day -->
           <div class="col-3">
             <p>Back in the Day</p>
           </div>
           <div class="col 8">
-            <p>UX Researcher</p>
-            <p>Open to new research opportunities</p>
+            <p>People Nerd</p>
+            <p>Experimental psychological researcher studying behavior change in adolescents</p>
+          </div>
+        </div>
+        <!-- EDUCATION -->
+        <div class="row mt-5 pl-3 pr-3 offset-1">
+        <div class="col-3">
+          <p>Education</p>
+        </div>
+        <div class="w-100">
+        </div>
+        <!-- UMICH -->
+        <div class="col-3">
+          <p>University of Michigan</p>
+        </div>
+        <div class="col 8">
+          <p>MS - Human-Computer Interaction & User Experience Research</p>
+        </div>
+        <div class="w-100">
+        </div>
+        <!-- UMCIH END -->
+        <!-- PITT -->
+        <div class="col-3">
+          <p>University of Pittsburgh</p>
+        </div>
+        <div class="col 8">
+          <p>BS - Psychology and Africana Studies</p>
+        </div>
+        <div class="w-100">
+        </div>
+        <!-- PITT END -->
+        </div>
+        <!-- EDUCATION END -->
+        <!-- DOWNLOAD RESUME -->
+        <div class="row mt-5 pl-3 pr-3 offset-1">
+          <div class="col-8">
+          <div class=""tabindex="0">
+            <a class="btn btn-primary" href="files\resume.PDF" role="button" target="_blank" >Download Resume</a>
+          </div>
           </div>
         </div>
 
-        <div class=""tabindex="0">
-          <a class="main-nav-link" href="files\resume.PDF" target="_blank" >RESUME</a>
-        </div>
-        <!-- EXP END -->
+        <!-- RESUME END -->
         <!-- CONTAINER END -->
       </div>
     </main>
