added new hero image

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
               A UX Researcher and Human-Centered Designer with a background in consulting and experimental psychology.
             </p>
             <!-- hero image -->
-            <img class="about-img"src="images\image.JPG" alt="">
+            <img class="about-img"src="images\edited-profile-pic.png" alt="">
             <p class="offset-10">photo credit
             </p>
           </div>
