--- a/work.html
+++ b/work.html
@@ -36,11 +36,11 @@
         <!-- resuse nav end -->
         <!-- WORK -->
         <div class="row mt-5 pl-3 pr-3 offset-1" id="work">
-          <div class="col-11 mb-3">
+          <div class="mb-3">
             <h2>Work</h2>
           </div>
           <!-- Monotype column -->
-          <div class="col-5 mt-1">
+          <div class="mt-1">
             <!-- monotype card -->
             <div class="card">
               <div class="card-body">
@@ -60,7 +60,7 @@
             </div>
           </div>
           <!-- Makeaton column -->
-          <div class="col-5 mt-1">
+          <div class="mt-1">
             <!-- makeathon card -->
             <div class="card">
               <div class="card-body">
@@ -79,7 +79,7 @@
             </div>
           </div>
           <!-- Babybracket column -->
-          <div class="col-5 mt-5">
+          <div class="mt-5">
             <!-- babybracket card -->
             <div class="card">
               <div class="card-body">
@@ -99,7 +99,7 @@
             </div>
           </div>
           <!-- CUTGroup column -->
-          <div class="col-5 mt-5">
+          <div class="mt-5">
             <!-- cutgroup card -->
             <div class="card">
               <div class="card-body">
