--- a/work.html
+++ b/work.html
@@ -35,7 +35,7 @@
         </div>
         <!-- resuse nav end -->
         <!-- WORK -->
-        <div class="row mt-5 pl-3 pr-3 offset-1" id="work">
+        <div class="mt-5 pl-3 pr-3 offset-1" id="work">
           <div class="mb-3">
             <h2>Work</h2>
           </div>
