deleted old case study pages, add shogun

--- a/shogun.html
+++ b/shogun.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Liz Brown UX Researcher and Consultant | Baby Bracket CaseStudy</title>
+    <title>Liz Brown UX Researcher and Consultant | Shogun CaseStudy</title>
     <link rel="images" href="images">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@100;300;400;700;900&display=swap" rel="stylesheet">
@@ -29,7 +29,7 @@
     <main>
       <!--CONTAINER -->
       <div class="container-fulid">
-        <!--  NAV -->
+        <!-- NAV -->
         <div id="nav">
 
         </div>
@@ -37,44 +37,44 @@
         <div class="container mono-hero-container offset-2">
           <div class="row mt-5 pt-5  ">
             <div class="col-10 ">
-              <h1 class="mono-h1">BABY BRACKET</h1>
-              <h2 class="mono-h2">Customer Discovery & Product Design</h2>
+              <h1 class="mono-h1">Shogun</h1>
+              <h2 class="mono-h2">User testing</h2>
             </div>
           </div>
           <div class="row mt-5 pt-5">
             <div class="col-10">
               <h3>Research Topic</h3>
-              <p>Baby naming product</p>
+              <p>Varies</p>
             </div>
             <div class="w-100">
             </div>
             <div class="col-10">
               <h3>People</h3>
-              <p>Anyone thinking about baby names</p>
+              <p></p>
             </div>
             <div class="w-100">
             </div>
             <div class="col-10">
               <h3>Research Question</h3>
-              <p>How do people select a name for their baby?</p>
+              <p></p>
             </div>
             <div class="w-100">
             </div>
             <div class="col-10">
               <h3>Problem Statement</h3>
-              <p>This research describes the jouney people take when selecting a baby name.</p>
+              <p></p>
             </div>
             <div class="w-100">
             </div>
             <div class="col-10">
               <h3>Research Outcome</h3>
-              <p>An iOS MVP for a Baby naming app called 'Baby Bracket'</p>
+              <p></p>
             </div>
             <div class="w-100">
             </div>
             <div class="col-10">
               <h3>Research Process</h3>
-              <p>This research describes the journey people take when selecting a baby name by surveying and interviewing potential and new parents. This research also evaluated the in-app journey people take when using Baby Bracket to create a list of baby names through multiple rounds of usability testing.</p>
+              <p></p>
             </div>
           </div>
         </div>
