--- a/work.html
+++ b/work.html
@@ -39,6 +39,17 @@
           <div class="mb-3">
             <h2>Work</h2>
           </div>
+          <!-- Shogun column -->
+          <div class="mt-1">
+            <!-- shogun card -->
+            <div class="card">
+              <div class="card-body">
+                <h3 class="card-title">SHOGUN</h3>
+                <p class="card-text">Creating software to power the world's fastest websites</p>
+                <a href="shogun.html" class="btn" tabindex="0">Power through</a>
+              </div>
+            </div>
+          </div>
           <!-- Monotype column -->
           <div class="mt-1">
             <!-- monotype card -->
@@ -47,54 +58,6 @@
                 <h3 class="card-title">MONOTYPE</h3>
                 <p class="card-text">Applying service design to understand how user and employee problems intersect</p>
                 <a href="monotype.html" class="btn" tabindex="0">Font more?</a>
-              </div>
-              <div class="card-footer mt-2">
-                <span class="badge badge-pill badge-light">Service Design</span>
-                <span class="badge badge-pill badge-light">UX Research</span>
-                <span class="badge badge-pill badge-light">SaaS</span>
-                <span class="badge badge-pill badge-light">3 Months</span>
-                <span class="badge badge-pill badge-light">User Interviews</span>
-                <span class="badge badge-pill badge-light">Service Mapping</span>
-                <span class="badge badge-pill badge-light">Customer Journeys</span>
-              </div>
-            </div>
-          </div>
-          <!-- Makeaton column -->
-          <div class="mt-1">
-            <!-- makeathon card -->
-            <div class="card">
-              <div class="card-body">
-                <h3 class="card-title">MAKE-A-THON</h3>
-                <p class="card-text">Competing against 50 teams to pitch and win a 36-hour product design competition</p>
-                <a href="#" class="btn">How we won</a>
-              </div>
-              <div class="card-footer mt-2">
-                <span class="badge badge-pill badge-light">UX Research</span>
-                <span class="badge badge-pill badge-light">Pitching</span>
-                <span class="badge badge-pill badge-light">Digital Mock-up</span>
-                <span class="badge badge-pill badge-light">36 Hours</span>
-                <span class="badge badge-pill badge-light">User Interviews</span>
-
-              </div>
-            </div>
-          </div>
-          <!-- Babybracket column -->
-          <div class="mt-5">
-            <!-- babybracket card -->
-            <div class="card">
-              <div class="card-body">
-                <h3 class="card-title">BABY BRACKET</h3>
-                <p class="card-text">Conducting discovery research and user testing for a social baby naming app</p>
-                <a href="baby-bracket.html" class="btn">Meet our baby</a>
-              </div>
-              <div class="card-footer mt-2">
-                <span class="badge badge-pill badge-light">UX Research</span>
-                <span class="badge badge-pill badge-light">UX Design</span>
-                <span class="badge badge-pill badge-light">iOS MVP</span>
-                <span class="badge badge-pill badge-light">4 Months</span>
-                <span class="badge badge-pill badge-light">User Interviews</span>
-                <span class="badge badge-pill badge-light">Customer Journeys</span>
-                <span class="badge badge-pill badge-light">Surveys</span>
               </div>
             </div>
           </div>
@@ -106,14 +69,6 @@
                 <h3 class="card-title">CUTGroup</h3>
                 <p class="card-text">A rapid user testing program</p>
                 <a href="cutgroup.html" class="btn">Cut to chase</a>
-              </div>
-              <div class="card-footer mt-2">
-                <span class="badge badge-pill badge-light">UX Research</span>
-                <span class="badge badge-pill badge-light">User testing</span>
-                <span class="badge badge-pill badge-light">Mobile Apps</span>
-                <span class="badge badge-pill badge-light">Voice Apps</span>
-                <span class="badge badge-pill badge-light">Websites</span>
-                <span class="badge badge-pill badge-light">Civic Program</span>
               </div>
             </div>
           </div>
