added top margins, added headers

--- a/resume.html
+++ b/resume.html
@@ -37,10 +37,10 @@
         <!-- RESUME -->
         <div class="row mt-5 pl-3 pr-3 offset-1">
           <div class="col-11 mb-3">
-            <h2>Resume</h2>
+            <h1>Resume</h1>
           </div>
           <div class="col-3">
-            <p>Experience</p>
+            <h2>Experience</h2>
           </div>
           <div class="w-100">
           </div>
@@ -49,7 +49,7 @@
             <p>Today</p>
           </div>
           <div class="col 8">
-            <p>UX Researcher</p>
+            <h3>UX Researcher</h3>
             <p>Open to new research opportunities</p>
           </div>
           <div class="w-100">
@@ -59,7 +59,7 @@
             <p>2019 - 2020</p>
           </div>
           <div class="col 8">
-            <p>UX Researcher & Consultant</p>
+            <h3>UX Researcher & Consultant</h3>
             <p>Established the first human-centered consulting service at the University of Michigan</p>
           </div>
           <div class="w-100">
@@ -69,7 +69,7 @@
             <p>2019</p>
           </div>
           <div class="col 8">
-            <p>UX Researcher Intern</p>
+            <h3>UX Research Intern</h3>
             <p>Conducted user research for a product team that developed enterprise SaaS for creative professionals</p>
           </div>
           <div class="w-100">
@@ -79,7 +79,7 @@
             <p>2019 - 2020</p>
           </div>
           <div class="col 8">
-            <p>UX Research Lead</p>
+            <h3>UX Research Lead</h3>
             <p>Co-Designed and implanted a usability testing program with government and civic organizations</p>
           </div>
           <div class="w-100">
@@ -88,7 +88,7 @@
             <p>2018</p>
           </div>
           <div class="col 8">
-            <p>UX Researcher</p>
+            <h3>UX Researcher</h3>
             <p>Applied research insights to deliver an MVP for a Baby naming app</p>
           </div>
           <div class="w-100">
@@ -98,7 +98,7 @@
             <p>2018 - 2020</p>
           </div>
           <div class="col 8">
-            <p>Civil Service Designer </p>
+            <h3>Civil Service Designer </h3>
             <p>Initiated a redesign of public housing records and implementation of new departmental procedures</p>
           </div>
           <div class="w-100">
@@ -108,14 +108,14 @@
             <p>Back in the Day</p>
           </div>
           <div class="col 8">
-            <p>People Nerd</p>
+            <h3>People Nerd</h3>
             <p>Experimental psychological researcher studying behavior change in adolescents</p>
           </div>
         </div>
         <!-- EDUCATION -->
         <div class="row mt-5 pl-3 pr-3 offset-1">
         <div class="col-3">
-          <p>Education</p>
+          <h2>Education</h2>
         </div>
         <div class="w-100">
         </div>
