--- a/resume.html
+++ b/resume.html
@@ -44,13 +44,13 @@
           </div>
           <div class="w-100">
           </div>
-          <!-- UXR/TODAY -->
+          <!-- Shogun -->
           <div class="col-3">
             <p>Today</p>
           </div>
           <div class="col 8">
             <h3>UX Researcher</h3>
-            <p>Open to new research opportunities</p>
+            <p>Creating software that powers the world's fastest ecommerce websites.</p>
           </div>
           <div class="w-100">
           </div>
@@ -60,7 +60,7 @@
           </div>
           <div class="col 8">
             <h3>UX Researcher & Consultant</h3>
-            <p>Established the first human-centered consulting service at the University of Michigan</p>
+            <p>Established the first human-centered consulting service at the University of Michigan.</p>
           </div>
           <div class="w-100">
           </div>
