changed how nav item opens

--- a/cc-nav.html
+++ b/cc-nav.html
@@ -16,7 +16,7 @@
       <a class="main-nav-link" href="index.html">ABOUT</a>
     </div>
     <div class=""tabindex="0">
-      <a class="main-nav-link" href="resume.html" target="_blank" >RESUME</a>
+      <a class="main-nav-link" href="resume.html" >RESUME</a>
     </div>
   </div>
 </div>
