updated copy, updated h1, h2, h3, p and nav margins

--- a/resume.html
+++ b/resume.html
@@ -50,7 +50,7 @@
           </div>
           <div class="col 8">
             <h3>UX Researcher</h3>
-            <p>Creating software that powers the world's fastest ecommerce websites.</p>
+            <p>Creating ecommerce software to power the world's fastest websites.</p>
           </div>
           <div class="w-100">
           </div>
