nav link color to black, adjusted col offset

--- a/resume.html
+++ b/resume.html
@@ -35,7 +35,7 @@
         </div>
         <!-- resuse nav end -->
         <!-- RESUME -->
-        <div class="row mt-5 pl-3 pr-3 offset-1">
+        <div class="row mt-4 pl-3 pr-3 offset-2">
           <div class="col-11 mb-3">
             <h1>Resume</h1>
           </div>
@@ -46,10 +46,10 @@
           </div>
           <!-- Shogun -->
           <div class="col-2">
-            <p>Today</p>
+            <p>2020 - Present</p>
           </div>
           <div class="col 8">
-            <h3>UX Researcher</h3>
+            <h3>UX Researcher at Shogun</h3>
             <p>Creating ecommerce software to power the world's fastest websites.</p>
           </div>
           <div class="w-100">
@@ -80,26 +80,7 @@
           </div>
           <div class="col 8">
             <h3>UX Research Lead</h3>
-            <p>Co-Designed and implanted a usability testing program with government and civic organizations</p>
-          </div>
-          <div class="w-100">
-          </div><!-- UXR/2018 -->
-          <div class="col-2">
-            <p>2018</p>
-          </div>
-          <div class="col 8">
-            <h3>UX Researcher</h3>
-            <p>Applied research insights to deliver an MVP for a Baby naming app</p>
-          </div>
-          <div class="w-100">
-          </div>
-          <!-- Civil Service/2016-2018 -->
-          <div class="col-2">
-            <p>2018 - 2020</p>
-          </div>
-          <div class="col 8">
-            <h3>Civil Service Designer </h3>
-            <p>Initiated a redesign of public housing records and implementation of new departmental procedures</p>
+            <p>Co-Designed and implemented a usability testing program with government and civic organizations</p>
           </div>
           <div class="w-100">
           </div>
@@ -113,7 +94,7 @@
           </div>
         </div>
         <!-- EDUCATION -->
-        <div class="row mt-5 pl-3 pr-3 offset-1">
+        <div class="row mt-5 pl-3 pr-3 offset-2">
         <div class="col-2">
           <h2>Education</h2>
         </div>
