--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             
             <!-- hero image -->
             <img class="about-img"src="images\edited-profile-pic.png" alt="">
-            <p class="offset-10">photo credit
+            <p class="">photo credit
             </p>
             <p class="about-p mt-3 mb-4">
               A UX Researcher and Human-Centered Designer with a background in consulting and experimental psychology.
