--- a/index.html
+++ b/index.html
@@ -36,14 +36,14 @@
         <!-- resuse nav end -->
         <!-- HERO -->
         <div class="row mt-5 pl-3 pr-3 offset-1">
-          <div class="col-11 about-container">
+          <div class="col-8 about-container">
             <h1>Liz Brown</h1>
             
             <!-- hero image -->
             <img class="about-img"src="images\edited-profile-pic.png" alt="">
             <p class="">photo credit
             </p>
-            <p class="about-p mt-3 mb-4">
+            <p class="hero-p mt-3 mb-4">
               A UX Researcher and Human-Centered Designer with a background in consulting and experimental psychology.
             </p>
           </div>
@@ -51,7 +51,7 @@
         <!-- HERO END -->
         <!-- ABOUT -->
         <div class="row mt-4 mb-5 pl-3 pr-3 offset-1">
-          <div class="col-11 about-container">
+          <div class="col-8 about-container">
             <!-- Header -->
             <h2>Be Thinking</h2>
             <!-- content -->
