edting index content

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         </div>
         <!-- resuse nav end -->
         <!-- HERO -->
-        <div class="row mt-5 pl-3 pr-3 offset-1">
+        <div class="row mt-5 pl-3 pr-3 offset-2">
           <div class="col-8 about-container">
             <h1>Liz Brown</h1>
             
@@ -50,7 +50,7 @@
         </div>
         <!-- HERO END -->
         <!-- ABOUT -->
-        <div class="row mt-4 mb-5 pl-3 pr-3 offset-1">
+        <div class="row mt-4 mb-5 pl-3 pr-3 offset-2">
           <div class="col-8 about-container">
             <!-- Header -->
             <h2>Be Thinking</h2>
@@ -65,9 +65,7 @@
               At any moment, you might find me playing strategy games, advocating for the term 'enslaved people' over the term 'slaves,' reading wiki articles, writing one screenplay over and over again, listening to Little Dragon, or playing tennis.
               <br><br>
 
-              Send work requests, intersting tidbits, other things my way at <a href="mailto:liz.alma.brown@gmail.com?subject=*Waving emoji hand* Hi Liz!" target="_self" data-content="liz.alma.brown@gmail.com" data-type="mail" target="_blank">liz.alma.brown@gmail.com</a>.
-            </p>
-            <p class="offset-9">Thanks for stopping by.
+              Reach out at <a href="mailto:liz.alma.brown@gmail.com?subject=*Waving emoji hand* Hi Liz!" target="_self" data-content="liz.alma.brown@gmail.com" data-type="mail" target="_blank">liz.alma.brown@gmail.com</a>.
             </p>
           </div>
 
