updated index/about copy

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             <p class="">photo credit
             </p>
             <p class="hero-p mt-3 mb-4">
-              A UX Researcher and Human-Centered Designer with a background in consulting and experimental psychology.
+              UX Researcher and Human-Centered Designer with a background in consulting and experimental psychology. Education Director at <a href="https://qtbipoc.design/">QTBIPOC Design</a> A queer design organization created by and for queer people of color. 
             </p>
           </div>
         </div>
@@ -56,13 +56,13 @@
             <h2>Be Thinking</h2>
             <!-- content -->
             <p class="about-p mt-4 mb-4">
-              Here, on our four billion year-old planet, hurrling through the unknown unknown. I take each day as it comes. Discovering experiences and untangling meaning and embracing the things I learning to love, like messiness and imperfection.
+              Here, on our four billion year-old planet--hurrling through the unknown unknown. I take each day as it comes. 
               <br><br>
 
-              Being a UX researcher doesn't define me, but it does inspire me. Everyday I try to get a little better, a littler wiser, a little more empathic, and a little more grateful.
+              Being a UX researcher doesn't define me, but it does inspire me. I enjoy untangling meaning--like messiness and imperfection. 
               <br><br>
 
-              At any moment, you might find me playing strategy games, advocating for the term 'enslaved people' over the term 'slaves,' reading wiki articles, writing one screenplay over and over again, listening to Little Dragon, or playing tennis.
+              Everyday I try to get a little better, a littler wiser, a little more empathic, and a little more grateful. At any moment, you might find me playing strategy games, advocating for the term 'enslaved people' over the term 'slaves,' reading wiki articles, Working with QTBIPOC designers,writing one screenplay over and over again, listening to Little Dragon, or playing tennis.
               <br><br>
 
               Reach out at <a href="mailto:liz.alma.brown@gmail.com?subject=*Waving emoji hand* Hi Liz!" target="_self" data-content="liz.alma.brown@gmail.com" data-type="mail" target="_blank">liz.alma.brown@gmail.com</a>.
