more index content changes

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             <p class="">photo credit
             </p>
             <p class="hero-p mt-3 mb-4">
-              UX Researcher and Human-Centered Designer at <a href="https://getshogun.com/frontend" target="_blank">Shogun.</a> Education Director at <a href="https://qtbipoc.design/" target="_blank">QTBIPOC Design</a> A queer design organization created by and for queer people of color. Background in consulting and experimental psychology.
+              UX Researcher and Human-Centered Designer at <a href="https://getshogun.com/frontend" target="_blank">Shogun</a>. Education Director at <a href="https://qtbipoc.design/" target="_blank">QTBIPOC Design</a> A queer design organization created by and for queer people of color. Background in consulting and experimental psychology.
             </p>
           </div>
         </div>
