updated index and nav colors

--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
             
             <!-- hero image -->
             <img class="about-img"src="images\edited-profile-pic.png" alt="">
-            <p class="hero-p mt-3 mb-4">
-              UX Researcher and Human-Centered Designer at <a href="https://getshogun.com/frontend" target="_blank">Shogun</a>. Education Director at <a href="https://qtbipoc.design/" target="_blank">QTBIPOC Design</a>. Background in consulting and experimental psychology.
+            <p class="hero-p mt-4 mb-4">
+              UX Researcher and Human-Centered Designer at <a class="hero-a-tag" href="https://getshogun.com/frontend" target="_blank">Shogun</a>. Education Director at <a class="hero-a-tag" href="https://qtbipoc.design/" target="_blank">QTBIPOC Design</a>. Background in consulting and experimental psychology.
             </p>
           </div>
         </div>
@@ -63,7 +63,7 @@
               Everyday I try to get a little better, a littler wiser, a little more empathic, and a little more grateful. At any moment, you might find me playing strategy games, advocating for the term 'enslaved people' over the term 'slaves,' reading wiki articles, Working with QTBIPOC designers,writing one screenplay over and over again, listening to Little Dragon, or playing tennis.
               <br><br>
 
-              Reach out at <a href="mailto:liz.alma.brown@gmail.com?subject=*Waving emoji hand* Hi Liz!" target="_self" data-content="liz.alma.brown@gmail.com" data-type="mail" target="_blank">liz.alma.brown@gmail.com</a>.
+              Reach out at <a class="hero-a-tag" href="mailto:liz.alma.brown@gmail.com?subject=*Waving emoji hand* Hi Liz!" target="_self" data-content="liz.alma.brown@gmail.com" data-type="mail" target="_blank">liz.alma.brown@gmail.com</a>.
             </p>
           </div>
 
