updated nav tags, added new font Alata

--- a/cc-nav.html
+++ b/cc-nav.html
@@ -1,15 +1,15 @@
 <!-- NAV -->
 <div class="row main-nav">
   <!-- nav -->
-  <div class="col-nav-links col-2 offset-6">
+  <div class="nav-link-group col-2 offset-6">
     <div class=""tabindex="0">
-      <a class="main-nav-link" href="index.html">ABOUT</a>
+      <a class="nav-link" href="index.html">About</a>
     </div>
     <div class=""tabindex="0">
-      <a class="main-nav-link" href="work.html">WORK</a>
+      <a class="main-nav-link" href="work.html">Work</a>
     </div>
     <div class=""tabindex="0">
-      <a class="main-nav-link" href="resume.html" >RESUME</a>
+      <a class="main-nav-link" href="resume.html" >Resume</a>
     </div>
   </div>
 </div>
