--- a/work.html
+++ b/work.html
@@ -5,7 +5,12 @@
     <title>Liz Brown UX Researcher and Consultant</title>
     <link rel="images" href="images">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    
+    <!-- fonts -->
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Alata&display=swap" rel="stylesheet"> 
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@100;300;400;700;900&display=swap" rel="stylesheet">
+    
     <link rel="stylesheet" href="css\custom.css">
     <!-- scripts -->
     <script src="https://kit.fontawesome.com/bb7ea3d4ab.js" crossorigin="anonymous">
