--- a/cc-nav.html
+++ b/cc-nav.html
@@ -6,10 +6,10 @@
       <a class="nav-link" href="index.html">About</a>
     </div>
     <div class=""tabindex="0">
-      <a class="main-nav-link" href="work.html">Work</a>
+      <a class="nav-link" href="work.html">Work</a>
     </div>
     <div class=""tabindex="0">
-      <a class="main-nav-link" href="resume.html" >Resume</a>
+      <a class="nav-link" href="resume.html" >Resume</a>
     </div>
   </div>
 </div>
