--- a/cc-footer.html
+++ b/cc-footer.html
@@ -3,6 +3,7 @@
   <div class=" container">
     <div class=" icon-container">
     <a href="https://www.linkedin.com/in/lizbrownhcd/" class="fab fa-linkedin-in fa-2x" target="_blank"></a>
+    <a href="https://twitter.com/liz_brwn" target="_blank" class="fab fa-twitter-m fa-2x"></a>
     <a href="https://medium.com/@lizbrownmedi/about" target="_blank" class="fab fa-medium-m fa-2x"></a>
     <a href="mailto:liz.alma.brown@gmail.com?subject=Hello" target="_self" data-content="liz.alma.brown@gmail.com" data-type="mail" class="far fa-envelope fa-2x" target="_blank"></a>
     <p class="footer-p mt-1">© 2020 Built by uxliz</p>
