testing nav updates, updated footer

--- a/cc-footer.html
+++ b/cc-footer.html
@@ -7,7 +7,7 @@
     <a class="footer-icon fab fa-medium-m fa-3x" href="https://medium.com/@lizbrownmedi/about" target="_blank"></a>
     <a class="footer-icon far fa-envelope fa-3x" href="mailto:liz.alma.brown@gmail.com?subject=Hello" target="_self" data-content="liz.alma.brown@gmail.com" data-type="mail" target="_blank"></a>
     </div>
-    <p class="footer-p mt-3">© 2020 Built by uxliz</p>
+    <p class="footer-p mt-3">© 2020</p>
   </div>
 </footer>
 <!-- END OF FOOTER -->
