testing nav changes/ new function

--- a/cc-nav.html
+++ b/cc-nav.html
@@ -1,7 +1,9 @@
 <!-- NAV -->
 <div class="row main-nav">
   <div class="col 3 offset-2">
-    <h1>Testestse</h1>
+    <h1 id="title">
+      <!-- insert function -->
+    </h1>
   </div>
   <div class="w-100">
   </div>
