testing new function nav

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     </script>
     <script>
       $(function(){
-          $('#title').load('document.title');
+          $('#title').load('HTMLTitleElement.text');
       });
     </script>
     <script>
