updated about copy

--- a/index.html
+++ b/index.html
@@ -70,13 +70,12 @@
             <h2>Be Thinking</h2>
             <!-- content -->
             <p class="about-p mt-4 mb-4">
-              Here, on our four billion year-old planet--hurrling through the unknown unknown. I take each day as it comes. 
+              
+              Here, on our four billion year-old planet I enjoy my job, because it allows me to research and design systems for two of the most complex beings on earth--computers and humans.  
+  
               <br><br>
 
-              Being a UX researcher doesn't define me, but it does inspire me. I enjoy untangling meaning--like messiness and imperfection. 
-              <br><br>
-
-              Everyday I try to get a little better, a littler wiser, a little more empathic, and a little more grateful. At any moment, you might find me playing strategy games, advocating for the term 'enslaved people' over the term 'slaves,' reading wiki articles, Working with QTBIPOC designers,writing one screenplay over and over again, listening to Little Dragon, or playing tennis.
+              When I'm not resarching human-computer interactions, you can find me practicing spanish, playing strategy games, advocating for the term 'enslaved people' over the term 'slaves,' reading wiki articles, working with QTBIPOC designers, chilling with my cat, writing one screenplay over and over again, listening to Little Dragon, or playing tennis.
               <br><br>
 
               Reach out at <a class="hero-a-tag" href="mailto:liz.alma.brown@gmail.com?subject=*Waving emoji hand* Hi Liz!" target="_self" data-content="liz.alma.brown@gmail.com" data-type="mail" target="_blank">liz.alma.brown@gmail.com</a>.
