testing title function, still can't get it to work

--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@
     <script>
       $(function(){
           $('#title').load('HTMLTitleElement.text');
+          console.log('title function ran')
+          console.log('HTMLTitleElement.text')
       });
     </script>
     <script>
