--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       $(function(){
           $('#title').load('HTMLTitleElement.text');
           console.log('title function ran')
-          console.log('HTMLTitleElement.text')
+          console.log(HTMLTitleElement.text)
       });
     </script>
     <script>
