--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@
           $('#title').load('HTMLTitleElement.text');
           console.log('title function ran')
           console.log(HTMLTitleElement.text)
+          console.log(HTMLTitleElement)
+          console.log(document.title)
       });
     </script>
     <script>
