--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Liz Brown UX Researcher and Consultant</title>
+    <title>Liz Brown</title>
     
     
     <!-- style sheets & images -->
@@ -29,10 +29,8 @@
     </script>
     <script>
       $(function(){
-          $('#title').load('HTMLTitleElement.text');
+          $('#title').load(document.title);
           console.log('title function ran')
-          console.log(HTMLTitleElement.text)
-          console.log(HTMLTitleElement)
           console.log(document.title)
       });
     </script>
