--- a/cc-nav.html
+++ b/cc-nav.html
@@ -1,3 +1,11 @@
+<script>
+  $(function(){
+      $('#title').load(document.title);
+      console.log('title function ran')
+      console.log(document.title)
+  });
+</script>
+
 <!-- NAV -->
 <div class="row main-nav">
   <div class="col 3 offset-2">
