--- a/cc-nav.html
+++ b/cc-nav.html
@@ -1,19 +1,9 @@
-<script>
-  $(function(){
-      $('#title').load(document.title);
-      console.log('title function ran')
-      console.log(document.title)
-  });
-</script>
-
 <!-- NAV -->
 <div class="row main-nav">
-  <div class="col 3 offset-2">
+  <div class="col-2">
     <h1 id="title">
       <!-- insert function -->
     </h1>
-  </div>
-  <div class="w-100">
   </div>
   <!-- nav -->
   <div class="nav-link-group col-1 offset-7">
@@ -28,3 +18,11 @@
     </div>
   </div>
 </div>
+
+<script>
+  $(function(){
+      $('#title').load(document.title);
+      console.log('title function ran')
+      console.log(document.title)
+  });
+</script>
