more testing the nav function

--- a/cc-nav.html
+++ b/cc-nav.html
@@ -26,3 +26,7 @@
       console.log(document.title)
   });
 </script>
+<script>
+  titletag = document.getElementById('title')
+  titletag.textContent = document.title
+  </script>
